--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -199,6 +199,7 @@ xcopy $(OutDir)\Engine.lib $(SolutionDir)\Lib\ /e /y</Command>
     </ClCompile>
     <ClCompile Include="Level\Level.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Engine\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor\Actor.h" />
@@ -210,6 +211,7 @@ xcopy $(OutDir)\Engine.lib $(SolutionDir)\Lib\ /e /y</Command>
     <ClInclude Include="PreCompiledHeader\PreCompiledHeader.h" />
     <ClInclude Include="Level\Level.h" />
     <ClInclude Include="RTTI.h" />
+    <ClInclude Include="Engine\Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
