--- a/MudGame/MudGame.vcxproj.filters
+++ b/MudGame/MudGame.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Actor\Animal.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Actor\Item\Weapon\Weapon.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game\Game.h">
@@ -72,6 +75,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Actor\Animal.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Actor\Item\Weapon\Weapon.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Actor\Item\Weapon\Knife.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
