--- a/MudGame/MudGame.vcxproj.filters
+++ b/MudGame/MudGame.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Actor\Item\Weapon\Weapon.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Actor\Item\Weapon\Knife.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game\Game.h">
