--- a/MudGame/MudGame.vcxproj
+++ b/MudGame/MudGame.vcxproj
@@ -202,6 +202,7 @@ chcp 65001
     <ClCompile Include="Actor\Tree.cpp" />
     <ClCompile Include="Game\Game.cpp" />
     <ClCompile Include="Actor\Ground.cpp" />
+    <ClCompile Include="Level\BattleScene.cpp" />
     <ClCompile Include="Level\MainLevel.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Level\MenuLevel.cpp" />
