--- a/MudGame/MudGame.vcxproj.filters
+++ b/MudGame/MudGame.vcxproj.filters
@@ -1,100 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="소스 파일">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="헤더 파일">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="리소스 파일">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
+    <ClCompile Include="Actor\Animal.cpp" />
+    <ClCompile Include="Actor\Item\Item.cpp" />
+    <ClCompile Include="Actor\Item\Weapon\Knife.cpp" />
+    <ClCompile Include="Actor\Item\Weapon\Weapon.cpp" />
+    <ClCompile Include="Actor\Item\Wood.cpp" />
+    <ClCompile Include="Actor\Player.cpp" />
+    <ClCompile Include="Actor\Tree.cpp" />
+    <ClCompile Include="Game\Game.cpp" />
+    <ClCompile Include="Actor\Ground.cpp" />
+    <ClCompile Include="Level\BattleScene.cpp" />
+    <ClCompile Include="Level\MainLevel.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Level\MenuLevel.cpp" />
+    <ClCompile Include="Actor\Item\Meat.cpp" />
+    <ClCompile Include="Level\CraftLevel.cpp" />
+    <ClCompile Include="Actor\Item\Weapon\Club.cpp" />
+    <ClCompile Include="Actor\Item\Weapon\WoodSword.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Game\Game.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Actor\Player.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Level\MainLevel.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Level\MenuLevel.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Actor\Ground.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Actor\Tree.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Actor\Item\Wood.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Actor\Item\Item.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Actor\Animal.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Actor\Item\Weapon\Weapon.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Actor\Item\Weapon\Knife.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Level\BattleScene.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Game\Game.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Actor\Player.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Level\MainLevel.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Level\MenuLevel.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Actor\Ground.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Actor\Tree.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Actor\Item\Item.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Actor\Item\Wood.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Actor\Animal.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-<<<<<<< HEAD
-    <ClInclude Include="Level\CraftLevel.h">
-=======
-    <ClInclude Include="Actor\Item\Weapon\Weapon.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Actor\Item\Weapon\Knife.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Level\BattleScene.h">
->>>>>>> develop
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
+    <ClInclude Include="Actor\Animal.h" />
+    <ClInclude Include="Actor\Item\Item.h" />
+    <ClInclude Include="Actor\Item\Weapon\Knife.h" />
+    <ClInclude Include="Actor\Item\Weapon\Weapon.h" />
+    <ClInclude Include="Actor\Item\Wood.h" />
+    <ClInclude Include="Actor\Player.h" />
+    <ClInclude Include="Actor\Tree.h" />
+    <ClInclude Include="Game\Game.h" />
+    <ClInclude Include="Actor\Ground.h" />
+    <ClInclude Include="Level\CraftLevel.h" />
+    <ClInclude Include="Level\BattleScene.h" />
+    <ClInclude Include="Level\MainLevel.h" />
+    <ClInclude Include="Level\MenuLevel.h" />
+    <ClInclude Include="Actor\Item\Meat.h" />
+    <ClInclude Include="Actor\Item\Weapon\Club.h" />
+    <ClInclude Include="Actor\Item\Weapon\WoodSword.h" />
   </ItemGroup>
 </Project>
